--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -155,7 +155,7 @@
 /* Container for All Effects */
 .effects-container {
   position: relative;
-  display: flex;
+  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
